// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GridCol DoubleSpan should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 24,
            "maxWidth": "100%",
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "100%",
              "maxWidth": "100%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            span=2 (full width on mobile)
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridCol MixedSpans should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 24,
            "maxWidth": "100%",
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            span=1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "100%",
              "maxWidth": "100%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            span=2
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            span=1
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridCol SingleColumn should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 24,
            "maxWidth": "100%",
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
              "maxWidth": "50%",
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            span=1
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
